--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 
 :root {
    --text-color: #32FFD6;
    --isi-color: #A0A0A0;
    --text-kotak: #191A1E;
+   --text-p: #d1d5db;
 }
 
 *,
@@ -25,6 +27,14 @@ body {
    height: 100vh;
    background-color: #191A1E;
    text-align: center;
+
+}
+
+.containers {
+   padding: 25px;
+   max-width: 800px;
+   /* background-color: red; */
+   margin: 50px auto;
 }
 
 .perfil {
@@ -51,6 +61,15 @@ h1 {
 
 h3 {
    color: var(--isi-color);
+}
+
+p {
+   color: var(--text-p);
+   line-height: 1.5;
+   font-size: 18px;
+   font-weight: lighter;
+   font-family: 'Open Sans', sans-serif;
+   
 }
 
 .link {
@@ -129,6 +148,78 @@ a {
    -o-transform: scale(1.1);
 }
 
+/* about */
+
+
+.luar-kembali {
+   /* display: fixed; */
+   position: fixed;
+   bottom: 0;
+   /* width: 100%;
+   height: 200px;
+   background-color:red */
+   padding-bottom: 20px;
+}
+
+.kembali {
+   width: 50px;
+   height: 50px;
+   background: #3e3e3e;
+   text-align: center;
+   line-height: 50px;
+   border-radius: 50%;
+   -webkit-border-radius: 50%;
+   -moz-border-radius: 50%;
+   -ms-border-radius: 50%;
+   -o-border-radius: 50%;
+}
+
+.kembali img {
+   width: 25px;
+   height: 25px;
+}
+
+
+/* CERTI */
+
+
+
+img:hover {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+.jumbo {
+    width: 100%;
+    margin-bottom: 50px;
+}
+.thumbnail {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.thumbnail img {
+    width: 130px;
+    border: 5px solid #3e3e3e;
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+    }
+}
+
+.fade {
+    opacity: 0;
+    animation: fadeIn .5s forwards;
+    -webkit-animation: fadeIn .5s forwards;
+}
+
+.active {
+    opacity: 0.5;
+}
+
+
 
 
 
@@ -152,6 +243,11 @@ a {
 
    background-color: var(--text-kotak)
 } */
+
+/* about */
+
+
+
 
 
 }
